more spacing issues and some css

--- a/app/assets/stylesheets/main_page.css.sass
+++ b/app/assets/stylesheets/main_page.css.sass
@@ -29,3 +29,6 @@ a:active
 
   #stuff
     margin-top: 50px
+
+  .edit-and-destroy
+    color: $red
